kubernetes/apps/services/jellyseerr/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyseerr
  labels:
    app: jellyseerr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyseerr
  template:
    metadata:
      labels:
        app: jellyseerr
    spec:
      containers:
      - name: jellyseerr
        image: fallenbagel/jellyseerr:latest
        ports:
        - containerPort: 5055
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "1024Mi"
            cpu: "500m"
        volumeMounts:
        - mountPath: "/app/config"
          name: config-volume
      volumes:
      - name: config-volume
        persistentVolumeClaim:
          claimName: jellyseerr-config
---
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr-service
  namespace: jellyseerr
spec:
  selector:
    app: jellyseerr
  ports:
    - protocol: TCP
      port: 5055
      targetPort: 5055
  type: ClusterIP
