kubernetes/apps/services/jellyseerr/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyseerr-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec: 
  ingressClassName: nginx
  rules:
  - host: request.ashman.world
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jellyseerr-service
            port:
              number: 5055
  tls:
  - hosts:
    - request.ashman.world
    secretName: jellyseerr-tls
